Fix home page header on mobile & desktop

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -41,10 +41,10 @@ body {
 	text-align: left;
 	color: $white;
 	@media #{$small} {
-		display: block !important;
+		// display: block !important;
 	}
 	@media only screen and (max-height: 500px) {
-	    display: block !important;
+	    // display: block !important;
 	}
 }
 .flex {
@@ -71,14 +71,14 @@ body {
 }
 .container {
 	width: 36rem;
-	max-width: 550px;
+	max-width: 440px;
 	padding-right: 15px;
 	padding-left: 15px;
 	@include center-block();
-	background-color: $pale_pink; //$white;
+	background-color: $white_transp;
 	color: $color_shark;
 	z-index: 1;
-	border-radius: 3px;
+	border-radius: 25px;
 	box-shadow: 0 0 10px 0 rgba($color_shark,0.3);
 	@include transition(.5s);
 	@media #{$small} {
@@ -90,7 +90,7 @@ body {
 	}
 }
 .row {
-	margin-top: 15px;
+	margin-top: 25px;
 	text-align: center;
 	// .title {
 	//     // margin-top: 0;
