--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -26,6 +26,7 @@
 	&:last-of-type {
 		font-size: 1rem;
 		font-weight: 300;
+        margin-top: 20px;
 		margin-bottom: 20px;
 	}
 }
